--- a/templates/publish_post.html
+++ b/templates/publish_post.html
@@ -24,13 +24,15 @@
     </div>
     <p id="slogan">Ditt bidrag, vår säkerhet</p>
 
-    <!--NavBar-->
-    <nav class="navbar">
-        <ul>
-            <li><a href="/">Hem</a></li>
-            <li><a href="/Krishantering">Krishantering</a></li>
-            <li><a href="/Kontakt">Kontakta oss</a></li>
-
+  <!--NavBar-->
+  <nav class="navbar">
+    <ul>
+      <li id="dropmenu">
+        <div class="meny">Meny</div> <i class="fa fa-caret-down"></i>
+        <ul class="dropdown-content">
+          <li><a href="/">Hem</a></li>
+          <li><a href="/Krishantering">Krishantering</a></li>
+          <li><a href="/Kontakt">Kontakta oss</a></li>
             <!--Inloggad användare-->
             {% if is_logged_in != None %}
             <li><a href="/Ny">Publicera inlägg</a></li>
