--- a/templates/register.html
+++ b/templates/register.html
@@ -23,14 +23,16 @@
     </div>
     <p id="slogan">Ditt bidrag, vår säkerhet</p>
 
-    <nav class="navbar">
-        <ul>
-            <li id="dropmenu">
-                <div class="meny">Meny</div> <i class="fa fa-caret-down"></i>
-                <ul class="dropdown-content">
-                    <li><a href="/">Hem</a></li>
-                    <li><a href="/Krishantering">Krishantering</a></li>
-                    <li><a href="/Kontakt">Kontakta oss</a></li>
+  <!--NavBar-->
+  <nav class="navbar">
+    <ul>
+      <li id="dropmenu">
+        <div class="meny">Meny</div> <i class="fa fa-caret-down"></i>
+        <ul class="dropdown-content">
+          <li><a href="/">Hem</a></li>
+          <li><a href="/Krishantering">Krishantering</a></li>
+          <li><a href="/Kontakt">Kontakta oss</a></li>
+
                     <!--Inte inloggad användare-->
                     <li><a href="/Logga_in" id="loginbtn">Logga in</a></li>
                     <li><a href="/Registrering" id="regbtn">Gå med</a></li>
