--- a/templates/chrisis_tips.html
+++ b/templates/chrisis_tips.html
@@ -26,9 +26,12 @@
   </div>
   <p id="slogan">Ditt bidrag, vår säkerhet</p>
 
-    <!--NavBar-->
-    <nav class="navbar">
-      <ul>
+  <!--NavBar-->
+  <nav class="navbar">
+    <ul>
+      <li id="dropmenu">
+        <div class="meny">Meny</div> <i class="fa fa-caret-down"></i>
+        <ul class="dropdown-content">
           <li><a href="/">Hem</a></li>
           <li><a href="/Krishantering">Krishantering</a></li>
           <li><a href="/Kontakt">Kontakta oss</a></li>
