--- a/templates/register.html
+++ b/templates/register.html
@@ -56,14 +56,16 @@
 
             <!--Alert when registration succeed-->
             {%if created == True: %}
-            <div class="my-md-auto ms-4 mb-5 mt-3 col-9 col-md-4 alert alert-success alert-dismissible fade show" role="alert">
+            <div class="my-md-auto ms-4 mb-5 mt-3 col-9 col-md-4 alert alert-success alert-dismissible fade show"
+                role="alert">
                 <h4 class="alert-heading">Sådärja!</h4>
                 <p>Ditt konto är nu skapat</p>
                 <a href="/Logga_in" class="btn btn-dark">Logga in</a>
             </div>
 
             {%elif underaged == True: %}
-            <div class="my-md-auto ms-4 mb-5 mt-3 col-9 col-md-4 alert alert-warning alert-dismissible fade show" role="alert">
+            <div class="my-md-auto ms-4 mb-5 mt-3 col-9 col-md-4 alert alert-warning alert-dismissible fade show"
+                role="alert">
                 <h4 class="alert-heading">Tyvärr</h4>
                 <p>Du uppfyller inte ålderskraven för att kunna registrera dig på denna hemsida</p>
                 <a href="/" class="btn btn-dark">Tillbaka till startsidan</a>
@@ -73,7 +75,7 @@
             {%else: %}
             <div class="mt-4 col-12 col-md-6">
                 <form action="/Registrering" method="POST" class="pb-5" accept-charset="UTF-8">
-                    <label for="email" class="form-label mt-3 h6">Mejladress</label>
+                    <label for="email" class="form-label mt-3 h6">Mejladress</label><span class="text-danger">*</span>
                     <div class="input-group">
                         <span class="input-group-text">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
@@ -82,27 +84,33 @@
                                     d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z" />
                             </svg>
                         </span>
-                        <input class="form-control" type="email" id="email" name="email" placeholder="Din mejladress..." value="{{email}}">
+                        <input class="form-control" type="email" id="email" name="email" placeholder="Din mejladress..."
+                            value="{{email}}">
                     </div>
                     <p class="feedback_message_register"><small>{{no_email_feedback}}</small></p>
 
-                    <label for="birthday" class="form-label mt-3 h6">Födelsedatum</label>
+                    <label for="birthday" class="form-label mt-3 h6">Födelsedatum</label><span
+                        class="text-danger">*</span>
                     <input class="form-control" type="date" id="birthday" name="birthday" value={{birthday}}>
                     <p class="feedback_message_register"><small>{{no_birthday_feedback}}</small></p>
                     <p class="feedback_message_register"><small>{{age_feedback}}</small></p>
 
-                    <label for="pwd" class="form-label mt-3 h6">Lösenord</label>
-                    <input class="form-control" type="password" id="pwd1" name="pwd">
+                    <label for="pwd" class="form-label mt-3 h6">Lösenord</label><span class="text-danger">*</span>
+                    <input class="form-control" type="password" id="pwd" name="pwd">
                     <p class="feedback_message_register"><small>{{no_pwd_feedback}}</small></p>
                     <p class="feedback_message_register"><small>{{pwd_feedback}}</small></p>
 
-                    <label for="confirm_pwd" class="form-label mt-3 h6">Bekräfta Lösenord</label>
+                    <label for="confirm_pwd" class="form-label mt-3 h6">Bekräfta Lösenord</label><span
+                        class="text-danger">*</span>
                     <input class="form-control pwd_toggle" type="password" id="confirm_pwd" name="confirm_pwd">
+                    <p class="feedback_message_register"><small>{{no_confirm_pwd_feedback}}</small></p>
                     <p class="feedback_message_register"><small>{{confirm_pwd_feedback}}</small></p>
-
-                    <div class="form-check mt-2">
-                        <input class="mt-2" type="checkbox" id="show_password" onclick="togglePassword()"> Visa lösenord
+                    <div class="d-flex justify-content-start">
+                        <input class="form-check me-2" type="checkbox" id="show_password" onclick="togglePassword()">
+                        <label for="show_password">Visa lösenord</label>
                     </div>
+
+
 
                     <button type="submit" class="btn btn-dark mt-4 mb-4">Registrera mig</button>
                     <p>
