Bytt ut ett mer passande ord

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -102,7 +102,7 @@
 
             <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
               <div class="accordion-body">Inläggen på sidan är både publicerad av våra användare men man kan även filtrera till polisens 
-                inlägg. När man går med i Kriskoll så måste man ange sin ålder vilket delvis begränsar scam inlägg.
+                inlägg. När man går med i Kriskoll så måste man ange sin ålder vilket delvis begränsar bluffinlägg.
                 <br>
                 <br>
                 Däremot kan vi inte garantera att varje inlägg av våra användare är pålitlig.
