--- a/templates/profile.html
+++ b/templates/profile.html
@@ -85,7 +85,19 @@
                         {% endif %}
                         <input type="button" onclick="undisable_emailfield()" value="Ändra"
                             class="mt-3 btn btn-dark btn-sm" id="btn_toggle"></input>
-                    </form>
+
+                        <div id="saveSettingsModal" class="modal">
+                            <div class="modal-content">
+                                <span class="close" onclick="closeSettingsModal()">&times;</span>
+                                <p>Är du säker på att du vill ändra email?</p>
+                                <form id="logoutForm" action="/Uppdatera-email" method="POST">
+                                    <input type="hidden" name="logout" value="true">
+                                    <button type="submit" class="deletebtn">Ja, ändra email.</button>
+                                    <button type="button" onclick="closeSettingsModal()" class="cancelbtn">Avbryt</button>
+                                </form>
+                            </div>
+                        </div>
+                </form>
                 </div>
                 <h4 class="mt-4 text-center">Notifikationer</h4>
                 <div class="d-flex justify-content-center">
