Upd logout modal
Fel variabelnamn som gjorde att man inte kunde logga ut när man befann sig i kontakt-sidan. Fungerar nu.

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -42,7 +42,7 @@
           <li><a href="/Profil" id="profilebtn">Min profil</a></li>
           <li><a href="#" onclick="openLogoutModal()" id="logoutbtn" class="mt-4 mb-5"> Logga ut </a></li>
 
-          <div id="logouteModal" class="modal">
+          <div id="logoutModal" class="modal">
             <div class="modal-content">
               <span class="close" onclick="closeLogoutModal()">&times;</span>
               <p>Är du säker på att du vill logga ut?.</p>
