--- a/templates/polisen_api.html
+++ b/templates/polisen_api.html
@@ -41,18 +41,19 @@
             {% if is_logged_in != None %}
             <li><a href="/Ny">Publicera inlägg</a></li>
             <li><a href="/Profil" id="profilebtn">Min profil</a></li>
+            <li><a href="#" onclick="openLogoutModal()" id="logoutbtn" class="mt-4 mb-5" > Logga ut </a></li>
 
-                <div id="logoutModal" class="modal">
-                    <div class="modal-content">
-                        <span class="close" onclick="closeLogoutModal()">&times;</span>
-                        <p>Är du säker på att du vill logga ut?</p>
-                        <form id="logoutForm" action="/Logga_ut" method="POST">
-                            <input type="hidden" name="logout" value="true">
-                            <button type="submit" class="deletebtn">Ja, logga ut.</button>
-                            <button type="button" onclick="closeLogoutModal()" class="cancelbtn">Avbryt</button>
-                        </form>
-                    </div>
+            <div id="logoutModal" class="modal">
+                <div class="modal-content">
+                    <span class="close" onclick="closeLogoutModal()">&times;</span>
+                    <p>Är du säker på att du vill logga ut?</p>
+                    <form id="logoutForm" action="/Logga_ut" method="POST">
+                        <input type="hidden" name="logout" value="true">
+                        <button type="submit" class="deletebtn">Ja, logga ut.</button>
+                        <button type="button" onclick="closeLogoutModal()" class="cancelbtn">Avbryt</button>
+                    </form>
                 </div>
+            </div>
                     
                     <!--Inte inloggad användare-->
                     {% else %}
